# rpico-euro-seq

./: .editorconfig  .gitignore  .gitmodules  Cargo.toml  Embed.toml  README.md  bmp-flash.scr  index.html  index.js  pkg_index_js.js
.cargo/: config
.github/workflows/: build-binaries.yaml
app/: Cargo.toml
app/.cargo/: config
app/src/: alarms.rs  allocator.rs  core1.rs  debounce.rs  encoder.rs  gate_cv.rs  main.rs  midi_in.rs  mpmc.rs  switches.rs  task_queues.rs  util.rs
app/src/programs/: converter.rs  debug.rs  mod.rs
app/src/screen/: framebuffer.rs  interface.rs  mod.rs  st7735.rs  st7789.rs  st7789_dma.rs
contrib/: fs_gen.sh
embedded/: midi-embedded
emulator/: .eslintrc.yml  Cargo.toml  package-lock.json  package.json  webpack.config.js
emulator/js/: ActionBar.js  disk.js  index.js
emulator/src/: lib.rs
emulator/static/: react-piano.css  style.css
logic/: Cargo.toml
logic/src/: lib.rs  screen.rs  ui.rs  util.rs
logic/src/programs/: debug.rs  mod.rs  sequencer.rs
logic/src/programs/sequencer/: config.rs  data.rs  mod.rs  recorder.rs  ui.rs
logic/src/programs/sequencer/ui/: actions.rs  icons.rs  mod.rs  overlays.rs  roll.rs  score.rs
logic/src/programs/sequencer/ui/overlays/: dialogs.rs  menus.rs  mod.rs
logic/src/stdlib/: errors.rs  files.rs  mod.rs  output.rs  tasks.rs
logic/src/stdlib/ui/: button.rs  dialog.rs  icons.rs  input.rs  menu.rs  mod.rs  overlays.rs  select.rs
src/: dac.rs  encoder.rs  main-old.rs  main.rs  midi_in.rs  switches.rs  ui.rs  util.rs
src/programs/: converter.rs  debug.rs  mod.rs
src/screen/: interface.rs  mod.rs
voice_lib/: Cargo.toml
voice_lib/src/: lib.rs  note.rs  track.rs
