[package]
authors = ["Pedro Ferreira <pedro@dete.st>"]
edition = "2021"
readme = "README.md"
name = "midi-embedded"
version = "0.1.0"

[dependencies]
defmt = { version = "^0.3", features = ["alloc"] }
defmt-rtt = "^0.3"
panic-probe = { version = "^0.3", features = ["print-defmt"] }

cortex-m = "0.7.2"
cortex-m-rt = "0.7"
rp2040-hal = { version = "^0.4", features = ["eh1_0_alpha", "rt"] }
embedded-hal = { version = "0.2.5", features = ["unproven"] }
rp2040-boot2 = "0.2.0"
embedded-time = "0.12.0"
embedded-graphics = "0.7.1"
embedded-midi = "0.1.1"
embedded-sdmmc = { path = "../embedded-sdmmc-rs", default-features = false, features = ["defmt-log"]}
nb = "1.0.0"
ufmt = "0.1.0"
heapless = { version = "0.7.3", features = ["ufmt-impl"] }
mcp49xx = "0.2.0"
rotary-encoder-embedded = "^0.1"
embedded-dma = "^0.2"
voice_lib = { path = "../voice_lib" }
cassette = "0.2.3"
tinybmp = "0.3.1"

logic = { path = "../logic" }
alloc-cortex-m = "^0.4"
shared-bus = "^0.2"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 0
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
