[package]
authors = ["Pedro Ferreira <pedro@dete.st>"]
edition = "2021"
readme = "README.md"
name = "midi-embedded"
version = "0.1.0"

[dependencies]
defmt = { version = "^0.3", features = ["alloc"] }
defmt-rtt = "^0.3.2"
panic-probe = { version = "^0.3", features = ["print-defmt"] }

cortex-m = "0.7.5"
cortex-m-rt = "0.7.1"
rp2040-hal = { version = "^0.5", path = "../../../../3rd/rp-hal/rp2040-hal", features = ["eh1_0_alpha", "c_s_alpha", "rt"] }
embedded-hal = { version = "0.2.5", features = ["unproven"] }
rp2040-boot2 = "0.2.0"
embedded-time = "0.12.1"
embedded-graphics = "0.7.1"
embedded-midi = "0.1.2"
embedded-sdmmc = { path = "../embedded-sdmmc-rs", default-features = false, features = ["defmt-log"]}
nb = "1.0.0"
ufmt = "0.1.0"
heapless = { version = "^0.7.15", features = ["ufmt-impl"] }
mcp49xx = "0.2.0"
rotary-encoder-embedded = "^0.1"
embedded-dma = "^0.2"
voice_lib = { path = "../voice_lib" }
tinybmp = "^0.3.3"
futures = { version = "^0.3", default-features = false }
embassy-executor = { path = "../../../../3rd/embassy/embassy-executor" }
embassy-util = { path = "../../../../3rd/embassy/embassy-util" }
logic = { path = "../logic" }
shared-bus = { version = "^0.2" }
critical-section = { package = "critical-section", version = "=1.0.0-alpha.2", features = ["restore-state-u8"] }
linked_list_allocator = { version = "0.10.1", default-features = false, features = ["const_mut_refs"] }

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
