[package]
name = "emulator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
embedded-graphics = "^0.7"
embedded-graphics-web-simulator = "^0.3"
embedded-sdmmc = { path = "../embedded-sdmmc-rs" }
wasm-bindgen = { version = "^0.2", features = ["nightly", "serde-serialize"] }
wasm-bindgen-futures = "^0.4"
wasm-rs-async-executor = { version = "^0.9", features = ["cooperative-browser"] }
tinybmp = "^0.3"
logic = { path = "../logic" }
voice_lib = { path = "../voice_lib" }
js-sys = "^0.3"
midi-types = "^0.1"
serde = { version = "^1.0", features = ["derive"] }
wee_alloc = "^0.4"
ufmt = "^0.1"

[dependencies.web-sys]
version = "^0.3"
features = [
  'console',
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Performance',
  'Window',
  'AudioContext',
  'AudioDestinationNode',
  'OscillatorNode',
  'OscillatorType',
  'AudioParam',
  'AudioNode',
  'GainNode',
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response'
]

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "^0.1.5"
