[package]
name = "logic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ufmt = "^0.1"
embedded-graphics = "^0.7"
heapless = "^0.7"
tinybmp = "^0.3"
embedded-midi = "^0.1"
voice_lib = { path = "../voice_lib" }
