[package]
name = "logic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = "^0.3"
embedded-graphics = "^0.7"
profont = "^0.6"
heapless = { version = "^0.7", features = ["ufmt-impl", "serde"] }
tinybmp = "^0.3"
embedded-midi = "^0.1"
embedded-sdmmc = { path = "../embedded-sdmmc-rs", default-features = false, features = ["defmt-log"]}
voice_lib = { path = "../voice_lib" }
serde = { version = "^1.0", default-features = false, features = ["derive", "alloc"] }
ufmt = "^0.2"
alloc-cortex-m = { version = "^0.4", optional = true }
ciborium = {version = "^0.2", default-features = false, features = [] }
ciborium-io = {version = "^0.2"}
futures = { version = "^0.3", default-features = false }
